	* CORE: Revamped the javax.persistence annotation processing.  Found and fixed a annotation problem along the way.
	* CORE: Added a Dao.create(Collection) method for bulk creation.  Thanks to Farrukh Najmi for the good idea.
	* CORE: Fixed a bug with UpdateBuilder methods returning wrong type.  Thanks to Joseph Jones.  Bug #180.
	* ANDROID: Fixed the string processing when persisting java.sql.Timestamp classes. Bug #163.
	* ANDROID: Added initial take on Loader base classes from EgorAnd for newer Android versions.  Thanks much!!

4.48: 12/16/2013
	* CORE: Added support for tracking direct database connection activity with DatabaseConnectionProxy.
	* CORE: Fixed problem when inserting no columns to Sqlite (Android), other DBs. Thanks to Michael Weimann. Bug #155.
	* CORE: Added support for canceling of long running prepared queries. Thanks to Nathan Jones.
	* CORE: More aggressively remove of some ThreadLocal data.  Thanks to Pavel Arnošt.
	* CORE: Fixed problem with queries similar to and().not().like(...).  Thanks to ????.  Bug #159.
	* CORE: Added better use of object cache when hydrating foreign fields.  Thanks to Anthony Whitlock.  Feature #38.
	* ANDROID: Added initial API compatibility code for handling multiple API versions.  Needed to support canceling.

4.47: 9/8/2013
	* CORE: Added support to the QueryBuilder to support joinOr(...) and innerJoinOr().  Default is AND.
	* CORE: Added support to Dao for another type of queryRaw(...) method that maps results from Object[].
	* CORE: Renamed QueryBuilder and Where clear() to be reset() and deprecated the clear() methods.
	* CORE: Fixed problem where defaultValue = "" was being ignored.  Thanks to ManosProm.  Bug #152.
	* CORE: Fixed ForeignCollection.addAll() which was not doing the same thing as add().  Thanks to Igromanru.  Bug #153.

4.46: 7/29/2013
	* CORE: Added support for raw selects in inner queries.  More powerful and flexible.