@@ -38,7 +38,7 @@ public class H2DatabaseResults implements DatabaseResults {
 		int colN = getColumnCount();
 		String[] columnNames = new String[colN];
 		for (int colC = 0; colC < colN; colC++) {
-			columnNames[colC] = metaData.getColumnName(colC + 1);
+			columnNames[colC] = metaData.getColumnLabel(colC + 1);
 		}
 		return columnNames;
 	}
